syntax = "proto3";
package godis;

option go_package = "github.com/jscottransom/distributed_godis/api/godis";

message SetRequest {
   string key = 1;
   bytes value = 2;
}

message SetResponse {
    string response = 1;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    bytes value = 1;
}

service GodisService {
    rpc SetKey(SetRequest) returns (SetResponse) {}
    rpc GetKey(GetRequest) returns (GetResponse) {}
}